syntax="proto2";

package proto;
option go_package = "./proto";

service RaftNode {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc ReceiveLeaderHeartbeat(HeartbeatRequest) returns (Void) {}
}

message HeartbeatRequest {
  required uint64 term = 1;
}

message AppendEntriesRequest {
  required uint64 term = 1;
  required uint32 leaderId = 2;
  required uint32 prevLogIndex = 3;
  required uint32 prevLogTerm = 4;
  repeated Entry entries = 5;
  required uint32 leaderCommit = 6;
}

message AppendEntriesResponse {
  required uint64 term = 1;
  required bool success = 2;
}

message Entry {
  required uint64 term = 1;
  required uint32 index = 2;
}

message RequestVoteRequest {
  required uint64 term = 1;
  required uint32 candidateId = 2;
  required uint32 lastLogIndex = 3;
  required uint32 lastLogTerm = 4;
}

message RequestVoteResponse {
  required uint64 term = 1;
  required bool voteGranted = 2;
}

message Void {}